--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -24,11 +24,10 @@ jobs:
 
       - name: Build and test
 
-        run: | cd Movie_App
-	xcodebuild clean test -scheme Movie_App -workspace Movie_App.xcworkspace -destination "${destination}" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ONLY_ACTIVE_ARCH=NO
-
+run: |
+          cd Movie_App
+          xcodebuild clean test -scheme Movie_App -workspace Movie_App.xcworkspace -destination "${destination}" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ONLY_ACTIVE_ARCH=N
           bash <(curl -s https://codecov.io/bash)
-
         env: 
 
          destination: ${{ matrix.destination }}
