--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -26,7 +26,7 @@ jobs:
 
 run: |
           cd Movie_App
-          xcodebuild clean test -scheme Movie_App -workspace Movie_App.xcworkspace -destination "${destination}" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ONLY_ACTIVE_ARCH=N
+          xcodebuild clean test -scheme Movie_App -workspace Movie_App.xcworkspace -destination "${destination}" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ONLY_ACTIVE_ARCH=NO
           bash <(curl -s https://codecov.io/bash)
         env: 
 
