--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -1,33 +1,19 @@
-on: [push]
-
+on: push
 name: Test
-
 jobs:
-
   test:
-
     name: Test
-
     runs-on: macOS-latest
-
     strategy:
-
         matrix:
-
-          destination: ['platform=iOS Simulator,OS=12.2,name=iPhone X']
-
+          destination: ['platform=iOS Simulator,OS=12.2,name=iPhone X', 'platform=tvOS Simulator,OS=12.2,name=Apple TV 4K']
     steps:
-
       - name: Checkout
-
-        uses: actions/checkout@develop
-
+        uses: actions/checkout@master
       - name: Build and test
-
-      run: |
+        run: |
           cd Movie_App
           xcodebuild clean test -scheme Movie_App -workspace Movie_App.xcworkspace -destination "${destination}" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ONLY_ACTIVE_ARCH=NO
           bash <(curl -s https://codecov.io/bash)
-          
         env: 
          destination: ${{ matrix.destination }}
