--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -10,11 +10,11 @@ jobs:
           scheme: ['Movie']
     steps:
       - name: Checkout
-        uses: actions/checkout@master
+        uses: actions/checkout@develop
       - name: Build and test
         run: |
           cd Movie_App
-          xcodebuild clean test -scheme Movie_App -workspace Movie_App.xcworkspace -destination "${destination}" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ONLY_ACTIVE_ARCH=NO
+          xcodebuild clean test -project Movie_App.xcodeproj -scheme Movie_App -destination "${destination}" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ONLY_ACTIVE_ARCH=NO
           bash <(curl -s https://codecov.io/bash)
         env: 
          destination: ${{ matrix.destination }}
