--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -7,14 +7,14 @@ jobs:
     strategy:
         matrix:
           destination: ['platform=iOS Simulator,OS=12.2,name=iPhone X']
-          scheme: ['Movie']
+          scheme: ['Movie_App']
     steps:
       - name: Checkout
         uses: actions/checkout@master
       - name: Build and test
         run: |
           cd Movie_App
-          xcodebuild clean test -scheme Movie_App -workspace Movie_App.xcworkspace -destination "${destination}" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ONLY_ACTIVE_ARCH=NO
+          xcodebuild clean test -scheme -workspace Movie_App.xcworkspace -destination "${destination}" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ONLY_ACTIVE_ARCH=NO
           bash <(curl -s https://codecov.io/bash)
         env: 
          destination: ${{ matrix.destination }}
