--- a/Movie_App/Movie_App.xcodeproj/xcshareddata/xcschemes/Movie.xcscheme
+++ b/Movie_App/Movie_App.xcodeproj/xcshareddata/xcschemes/Movie.xcscheme
@@ -15,15 +15,15 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "0C8EF0C221E5C1DA00294632"
-               BuildableName = "Movie_App.app"
-               BlueprintName = "Movie_App"
+               BuildableName = "Movie.app"
+               BlueprintName = "Movie"
                ReferencedContainer = "container:Movie_App.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
-      buildConfiguration = "Release"
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
@@ -33,8 +33,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "0C8EF0C221E5C1DA00294632"
-            BuildableName = "Movie_App.app"
-            BlueprintName = "Movie_App"
+            BuildableName = "Movie.app"
+            BlueprintName = "Movie"
             ReferencedContainer = "container:Movie_App.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -42,7 +42,7 @@
       </AdditionalOptions>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Release"
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
@@ -56,8 +56,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "0C8EF0C221E5C1DA00294632"
-            BuildableName = "Movie_App.app"
-            BlueprintName = "Movie_App"
+            BuildableName = "Movie.app"
+            BlueprintName = "Movie"
             ReferencedContainer = "container:Movie_App.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -75,8 +75,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "0C8EF0C221E5C1DA00294632"
-            BuildableName = "Movie_App.app"
-            BlueprintName = "Movie_App"
+            BuildableName = "Movie.app"
+            BlueprintName = "Movie"
             ReferencedContainer = "container:Movie_App.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
