--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Build and test
         run: |
           cd Movie_App
-          xcodebuild -project Movie_App.xcodeproj -scheme Moviedd -destination "${destination}" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ONLY_ACTIVE_ARCH=NO
+          xcodebuild -project Movie_App.xcodeproj -scheme Movie -destination "${destination}" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ONLY_ACTIVE_ARCH=NO
           bash <(curl -s https://codecov.io/bash)
         env: 
          destination: ${{ matrix.destination }}
