--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -12,8 +12,7 @@ jobs:
         uses: actions/checkout@master
       - name: Build and test
         run: |
-          cd Movie_App
-          xcodebuild -project Movie_App.xcodeproj -scheme Movie -destination "${destination}" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ONLY_ACTIVE_ARCH=NO
+          xcodebuild -project Movie_App.xcodeproj -scheme Movie -destination "${destination}" build | xcpretty
           bash <(curl -s https://codecov.io/bash)
         env: 
          destination: ${{ matrix.destination }}
