--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@master
       - name: Build and test
         run: |
-          xcodebuild -project Movie_App.xcodeproj -scheme Movie -destination "${destination}" build | xcpretty
+          xcodebuild -workspace Movie_App.xcworkspace -scheme Movie -destination "${destination}" build | xcpretty
           bash <(curl -s https://codecov.io/bash)
         env: 
          destination: ${{ matrix.destination }}
